Recycler View data is loaded from database for chapeters

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,7 @@
         android:theme="@style/Theme.CFundamentals">
         <activity
             android:name=".ProfileActivity"
-            android:exported="true"
-            android:parentActivityName=".HomeActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".HomeActivity" />
-        </activity>
+            android:exported="true"/>
         <activity
             android:name=".ExampleActivity"
             android:exported="true" />
