--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CFundamentals">
         <activity
-            android:parentActivityName=".HomeActivity"
             android:name=".ProfileActivity"
+            android:parentActivityName=".HomeActivity"
             android:launchMode="singleInstance"
             android:exported="true">
             <meta-data
@@ -20,7 +20,7 @@
         </activity>
         <activity
             android:name=".ExampleActivity"
-            android:exported="true" />
+            android:exported="true"></activity>
         <activity
             android:name=".ChapterActivity"
             android:exported="true" />
