Activities are working perfectly now, favourites are still fucked up.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CFundamentals">
         <activity
-            android:launchMode="singleInstance"
             android:parentActivityName=".ProfileActivity"
             android:name=".UpdateProfileActivity"
             android:exported="true" >
@@ -21,14 +20,12 @@
         <activity
             android:name=".ProfileActivity"
             android:exported="true"
-            android:launchMode="singleInstance"
             android:parentActivityName=".HomeActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".HomeActivity" />
         </activity>
         <activity
-            android:launchMode="singleInstance"
             android:name=".ExampleActivity"
             android:exported="true" />
         <activity
@@ -37,17 +34,14 @@
             android:exported="true" />
         <activity
             android:clearTaskOnLaunch="true"
-            android:launchMode="singleInstance"
             android:name=".LoginActivity"
             android:exported="true"
             android:noHistory="true" />
         <activity
             android:name=".HomeActivity"
-            android:exported="true"
-            android:launchMode="singleInstance" />
+            android:exported="true" />
         <activity
             android:clearTaskOnLaunch="true"
-            android:launchMode="singleInstance"
             android:name=".SignUpActivity"
             android:exported="true"
             android:noHistory="true" />
