Delete account feature updated, reauthentication added.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CFundamentals">
         <activity
+            android:name=".DeleteAccountActivity"
+            android:exported="true" />
+        <activity
             android:name=".ChangeNameActivity"
             android:exported="true" />
         <activity
