Files and Functionality added.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,33 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CFundamentals">
         <activity
+            android:name=".FeedbackActivity"
+            android:exported="true"
+            android:parentActivityName=".ProfileActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ProfileActivity" /></activity>
+        <activity
+            android:name=".PrivacyPolicyActivity"
+            android:exported="true"
+            android:parentActivityName=".ProfileActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ProfileActivity" /></activity>
+        <activity
+            android:name=".TermsAndConditionsActivity"
+            android:exported="true"
+            android:parentActivityName=".ProfileActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ProfileActivity" /></activity>
+        <activity
             android:name=".DeleteAccountActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:parentActivityName=".ProfileActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ProfileActivity" /></activity>
         <activity
             android:name=".UpdateProfileActivity"
             android:exported="true"
