--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity
             android:name=".DeleteAccountActivity"
             android:exported="true"
+            android:screenOrientation="portrait"
             android:parentActivityName=".ProfileActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -27,6 +28,7 @@
         <activity
             android:name=".UpdateProfileActivity"
             android:exported="true"
+            android:screenOrientation="portrait"
             android:parentActivityName=".ProfileActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -35,6 +37,7 @@
         <activity
             android:name=".ProfileActivity"
             android:exported="true"
+            android:screenOrientation="portrait"
             android:parentActivityName=".HomeActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -43,6 +46,7 @@
         <activity
             android:name=".ExampleActivity"
             android:launchMode="singleInstance"
+            android:screenOrientation="portrait"
             android:parentActivityName=".HomeActivity"
             android:exported="true" >
             <meta-data
@@ -52,6 +56,7 @@
         <activity
             android:name=".ChapterActivity"
             android:exported="true"
+            android:screenOrientation="portrait"
             android:launchMode="singleInstance"
             android:parentActivityName=".HomeActivity">
             <meta-data
@@ -65,6 +70,7 @@
         <activity
             android:name=".SignUpActivity"
             android:clearTaskOnLaunch="true"
+            android:screenOrientation="portrait"
             android:exported="true"
             android:noHistory="true" />
         <activity
