--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CFundamentals">
         <activity
+            android:name=".WebActivity"
+            android:exported="true" />
+        <activity
             android:name=".DeleteAccountActivity"
             android:exported="true"
             android:parentActivityName=".UpdateProfileActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ProfileActivity" /></activity>
+                android:value=".ProfileActivity" />
+        </activity>
         <activity
             android:name=".UpdateProfileActivity"
             android:exported="true"
@@ -33,17 +37,17 @@
         </activity>
         <activity
             android:name=".ExampleActivity"
-            android:parentActivityName=".HomeActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:exported="true" >
+            android:exported="true"
+            android:parentActivityName=".HomeActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".HomeActivity"/>
+                android:value=".HomeActivity" />
         </activity>
         <activity
             android:name=".ChapterActivity"
-            android:exported="true"
             android:configChanges="keyboardHidden|orientation|screenSize"
+            android:exported="true"
             android:parentActivityName=".HomeActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
