Result code is not compared with activity result.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,7 +69,8 @@
             android:name=".SignUpActivity"
             android:clearTaskOnLaunch="true"
             android:exported="true"
-            android:noHistory="true" />
+            android:noHistory="true"
+            />
     </application>
 
 </manifest>
